# pipeline-parser

./: .gitignore  CMakeLists.txt  README.md  logparser.cpp  logparser.h  main.cpp
test/: testlogparser.cpp
